Access Denied action and view done

--- a/GreenBowlFoodsSystem/Views/Account/Login.cshtml
+++ b/GreenBowlFoodsSystem/Views/Account/Login.cshtml
@@ -26,12 +26,12 @@
                 <form asp-action="Login" method="post">
                     <div class="form-group mb-4">
                         <label for="Email" class="form-label">Email</label>
-                        <input type="email" name="Email" class="form-control" placeholder="name@greenbowl.com" required />
+                        <input type="email" name="Email" class="form-control" placeholder="Use:admin@yopmail.com" required />
                     </div>
 
                     <div class="form-group mb-4">
                         <label for="Password" class="form-label">Password</label>
-                        <input type="Password" name="Password" class="form-control" placeholder="••••••••" required />
+                        <input type="Password" name="Password" class="form-control" placeholder="Use: Admin123!" required />
                     </div>
 
                     <div class="d-grid gap-2 pt-2">
