--- a/GreenBowlFoodsSystem/Views/ProductionBatches/Create.cshtml
+++ b/GreenBowlFoodsSystem/Views/ProductionBatches/Create.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewData["Title"] = "Schedule Batch";
-    var currentUser = UserManager.GetUserName(User); // Obtenemos nombre para mostrarlo visualmente
+    var currentUser = await UserManager.GetUserAsync(User); // Obtenemos nombre para mostrarlo visualmente
 }
 
 <div class="row justify-content-center">
@@ -14,8 +14,8 @@
             <h1 class="display-6 fw-bold text-white">Schedule Production Batch</h1>
             <p class="text-white-50">Create a new production order.</p>
 
-            <span class="badge bg-success bg-opacity-10 text-success border border-success border-opacity-25 px-3 py-2 rounded-pill">
-                <i class="bi bi-person-check-fill me-2"></i>Supervisor: <strong>@currentUser</strong>
+            <span class="badge bg-success  text-white border border-success border-opacity-25 px-3 py-2 rounded-pill">
+                <i class="bi bi-person-check-fill me-2"></i>Supervisor: <strong>@currentUser!.FullName</strong>
             </span>
         </div>
 
