--- a/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
@@ -111,13 +111,18 @@
                                             <i class="bi bi-truck-flatbed"></i> Receiving Form
                                         </a>
                                     </li>
-
                                     <li><hr class="dropdown-divider"></li>
                                     <li class="nav-item">
                                         <a class="nav-link @GetActiveClass("RawMaterials")" asp-area="" asp-controller="RawMaterials" asp-action="Index">
-                                            <i class="bi bi-basket2-fill me-2"></i> Raw Materials
+                                            <i class="bi bi-basket2-fill  me-2"></i> Raw Materials
                                         </a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link @GetActiveClass("PackagingMaterials")" asp-area="" asp-controller="PackagingMaterials" asp-action="Index">
+                                            <i class="bi bi-box2 me-2"></i>Packaging Stock
+                                        </a>
+                                    </li>
+                                    <li><hr class="dropdown-divider"></li>
                                     <li class="nav-item">
                                         <a class="nav-link @GetActiveClass("Suppliers")" asp-area="" asp-controller="Suppliers" asp-action="Index">
                                             <i class="bi bi-truck me-2"></i> Suppliers
