--- a/GreenBowlFoodsSystem/Views/ReceivingForm/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/ReceivingForm/Index.cshtml
@@ -84,7 +84,7 @@
 
                                 <td class="text-end pe-4">
                                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm" style="color: #a3e635;" title="Details">
-                                    <i class="bi bi-eye-fill"></i>
+                                    <i class="bi bi-eye-fill"></i> Details
                                 </a>
                                 </td>
                             </tr>
