--- a/GreenBowlFoodsSystem/Views/Suppliers/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Suppliers/Index.cshtml
@@ -57,13 +57,13 @@
                             </td>
                             <td class="text-end pe-4">
                                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm" style="color: #38bdf8;" title="Edit">
-                                    <i class="bi bi-pencil-fill"></i>
+                                    <i class="bi bi-pencil-fill"></i> Edit
                                 </a>
                                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm" style="color: #a3e635;" title="Details">
-                                    <i class="bi bi-eye-fill"></i>
+                                    <i class="bi bi-eye-fill"></i> Details
                                 </a>
                                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm" style="color: #f87171;" title="Delete">
-                                    <i class="bi bi-trash-fill"></i>
+                                    <i class="bi bi-trash-fill"></i> Delete
                                 </a>
                             </td>
                         </tr>
