--- a/GreenBowlFoodsSystem/Views/XRayChecks/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/XRayChecks/Index.cshtml
@@ -93,13 +93,13 @@ else
                         <div class="d-flex justify-content-center gap-2 mb-2">
                             
                             <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success btn-sm rounded-pill px-3" style="color: #38bdf8;" title="Edit">
-                               <i class="bi bi-pencil-fill"></i>
+                               <i class="bi bi-pencil-fill"></i> Edit
                             </a>
                              <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary btn-sm rounded-pill px-3" style="color: #a3e635;" title="Details">
-                                <i class="bi bi-eye-fill"></i>
+                                <i class="bi bi-eye-fill"></i> Details
                             </a>
                             <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger btn-sm rounded-pill px-3" title="Delete">
-                                <i class="bi bi-trash-fill"></i>
+                                <i class="bi bi-trash-fill"></i> Delete
                             </a>
 
                         </div>
