--- a/GreenBowlFoodsSystem/Views/Users/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Users/Index.cshtml
@@ -49,13 +49,13 @@
                                 <td>
                                     @if (item.Role == "Admin")
                                     {
-                                        <span class="badge bg-danger bg-opacity-25 text-danger border border-danger border-opacity-25 rounded-pill px-3">
+                                        <span class="badge bg-danger  text-white border border-danger border-opacity-25 rounded-pill px-3">
                                             <i class="bi bi-shield-lock-fill me-1"></i> Admin
                                         </span>
                                     }
                                     else
                                     {
-                                        <span class="badge bg-success bg-opacity-25 text-success border border-success border-opacity-25 rounded-pill px-3">
+                                        <span class="badge bg-success  text-white border border-success border-opacity-25 rounded-pill px-3">
                                             <i class="bi bi-person-badge me-1"></i> Staff
                                         </span>
                                     }
@@ -63,13 +63,13 @@
                                 <td class="text-end pe-4">
                                     <div class="btn-group">
                                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-warning" title="Edit">
-                                            <i class="bi bi-pencil-square fs-5"></i>
+                                            <i class="bi bi-pencil-square fs-5"></i> Edit
                                         </a>
                                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-info" title="Details">
-                                            <i class="bi bi-info-circle fs-5"></i>
+                                            <i class="bi bi-info-circle fs-5"></i> Details
                                         </a>
                                         <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-light border-0 text-danger" title="Delete">
-                                            <i class="bi bi-trash fs-5"></i>
+                                            <i class="bi bi-trash fs-5"></i> Delete
                                         </a>
                                     </div>
                                 </td>
