--- a/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
@@ -134,20 +134,36 @@
                            
                             <li class="nav-item">
                                 <a class="nav-link @GetActiveClass("FinishedProducts")" asp-area="" asp-controller="FinishedProducts" asp-action="Index">
-                                    <i class="bi bi-bag-heart-fill me-2"></i> Products
+                                    <i class="bi bi-bag-heart-fill me-2"></i>Finished Products
                                 </a>
                             </li>
 
                             <li class="nav-item border-start border-secondary mx-2 d-none d-xl-block"></li>
                             <li class="nav-item">
                                 <a class="nav-link @GetActiveClass("ProductionBatches")" asp-area="" asp-controller="ProductionBatches" asp-action="Index">
-                                    <i class="bi bi-fire me-2"></i> Production
+                                    <i class="bi bi-fire me-2"></i> Production Batch
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link @GetActiveClass("Shipments")" asp-controller="Shipments" asp-action="Index">
-                                    <i class="bi bi-airplane-engines-fill me-2"></i> Shipping
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown">
+                                    <i class="bi bi-truck-front-fill me-2"></i> Logistics
                                 </a>
+                                <ul class="dropdown-menu dropdown-menu-dark shadow-lg" style="background-color:#065540;">
+
+                                    <li class="nav-item">
+                                        <a class="nav-link @GetActiveClass("Shipments")" asp-controller="Shipments" asp-action="Index">
+                                            <i class="bi bi-box-arrow-right me-2"></i> Shipments
+                                        </a>
+                                    </li>
+
+                                    <li><hr class="dropdown-divider border-secondary"></li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link @GetActiveClass("DeliveryForms")" asp-controller="DeliveryForms" asp-action="Index">
+                                            <i class="bi bi-clipboard-check me-2"></i> Delivery Form
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link @GetActiveClass("XRayChecks")" asp-area="" asp-controller="XRayChecks" asp-action="Index">
