--- a/GreenBowlFoodsSystem/Views/FinishedProducts/Details.cshtml
+++ b/GreenBowlFoodsSystem/Views/FinishedProducts/Details.cshtml
@@ -1,14 +1,14 @@
 ﻿@model GreenBowlFoodsSystem.Models.FinishedProduct
 
 @{
-    ViewData["Title"] = "Product Details";
+    ViewData["Title"] = "Product Finished Details";
 }
 
 <div class="row justify-content-center">
     <div class="col-md-6">
 
         <div class="text-center mb-4 animate-fade-up">
-            <h1 class="display-6 fw-bold text-white">Product Details</h1>
+            <h1 class="display-6 fw-bold text-white">Finished Product Details</h1>
             <p class="text-white">Information and pricing.</p>
         </div>
 
