--- a/GreenBowlFoodsSystem/Views/ProductionBatches/Create.cshtml
+++ b/GreenBowlFoodsSystem/Views/ProductionBatches/Create.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewData["Title"] = "Schedule Batch";
-    var currentUser = await UserManager.GetUserAsync(User); // Obtenemos nombre para mostrarlo visualmente
+    var currentUser = await UserManager.GetUserAsync(User); // We obtain a name to display it visually.
 }
 
 <div class="row justify-content-center">
