--- a/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 @inject SignInManager<User> SignInManager
 
 @{
-    // --- LÓGICA DE NAVEGACIÓN ACTIVA ---
+    //  ACTIVE NAVIGATION LOGIC 
     string GetActiveClass(string controllerName)
     {
         var currentController = ViewContext.RouteData.Values["Controller"]?.ToString();
@@ -18,11 +18,11 @@
         return "";
     }
 
-    // --- LÓGICA DE USUARIO Y ROL ---
+    // USER LOGIC AND ROLE
     var isloggedIn = User.Identity != null && User.Identity.IsAuthenticated;
     var isAdmin = isloggedIn && User.IsInRole("Admin");
 
-    // Variables para mostrar Nombre y Rol bonitos
+    // Variables to display Name and Role nicely
     string displayName = "";
     string userRole = "";
 
@@ -31,7 +31,7 @@
         var currentUser = await UserManager.GetUserAsync(User);
         if (currentUser != null)
         {
-            // Si tiene Nombre, lo usamos. Si no, usamos el Email pero cortado antes del @
+            // If you have a name, we use it. If not, we use the email address, but cut off before the @ symbol.
             displayName = !string.IsNullOrEmpty(currentUser.FirstName)
                           ? currentUser.FirstName
                           : User.Identity.Name.Split('@')[0];
@@ -83,7 +83,7 @@
                     <ul class="navbar-nav flex-grow-1 nav-pills-custom">
                         <li class="nav-item">
                             <a class="nav-link @GetActiveClass("Home")" asp-area="" asp-controller="Home" asp-action="Index">
-                                <i class="bi bi-speedometer2 me-2"></i> Dashboard
+                                <i class="bi bi-speedometer2 me-0"></i> Dashboard
                             </a>
                         </li>
 
@@ -103,7 +103,7 @@
                            
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown">
-                                    <i class="bi bi-box-seam me-2"></i> Inventory
+                                    <i class="bi bi-box-seam me-0"></i> Inventory
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark" style="background-color:#065540;">
                                     <li class="nav-item">
@@ -114,18 +114,18 @@
                                     <li><hr class="dropdown-divider"></li>
                                     <li class="nav-item">
                                         <a class="nav-link @GetActiveClass("RawMaterials")" asp-area="" asp-controller="RawMaterials" asp-action="Index">
-                                            <i class="bi bi-basket2-fill  me-2"></i> Raw Materials
+                                            <i class="bi bi-basket2-fill  me-0"></i> Raw Materials
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link @GetActiveClass("PackagingMaterials")" asp-area="" asp-controller="PackagingMaterials" asp-action="Index">
-                                            <i class="bi bi-box2 me-2"></i>Packaging Stock
+                                            <i class="bi bi-box2 me-0"></i>Packaging Stock
                                         </a>
                                     </li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li class="nav-item">
                                         <a class="nav-link @GetActiveClass("Suppliers")" asp-area="" asp-controller="Suppliers" asp-action="Index">
-                                            <i class="bi bi-truck me-2"></i> Suppliers
+                                            <i class="bi bi-truck me-0"></i> Suppliers
                                         </a>
                                     </li>
                                 </ul>
@@ -134,25 +134,25 @@
                            
                             <li class="nav-item">
                                 <a class="nav-link @GetActiveClass("FinishedProducts")" asp-area="" asp-controller="FinishedProducts" asp-action="Index">
-                                    <i class="bi bi-bag-heart-fill me-2"></i>Finished Products
+                                    <i class="bi bi-bag-heart-fill me-0"></i> Finished Products
                                 </a>
                             </li>
 
                             <li class="nav-item border-start border-secondary mx-2 d-none d-xl-block"></li>
                             <li class="nav-item">
                                 <a class="nav-link @GetActiveClass("ProductionBatches")" asp-area="" asp-controller="ProductionBatches" asp-action="Index">
-                                    <i class="bi bi-fire me-2"></i> Production Batch
+                                    <i class="bi bi-fire me-0"></i> Production Batch
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown">
-                                    <i class="bi bi-truck-front-fill me-2"></i> Logistics
+                                    <i class="bi bi-truck-front-fill me-0"></i> Logistics
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark shadow-lg" style="background-color:#065540;">
 
                                     <li class="nav-item">
                                         <a class="nav-link @GetActiveClass("Shipments")" asp-controller="Shipments" asp-action="Index">
-                                            <i class="bi bi-box-arrow-right me-2"></i> Shipments
+                                            <i class="bi bi-box-arrow-right me-0"></i> Shipments
                                         </a>
                                     </li>
 
@@ -160,14 +160,19 @@
 
                                     <li class="nav-item">
                                         <a class="nav-link @GetActiveClass("DeliveryForms")" asp-controller="DeliveryForms" asp-action="Index">
-                                            <i class="bi bi-clipboard-check me-2"></i> Delivery Form
+                                            <i class="bi bi-clipboard-check me-0"></i> Delivery Form
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link @GetActiveClass("XRayChecks")" asp-area="" asp-controller="XRayChecks" asp-action="Index">
-                                    <i class="bi bi-shield-check me-1"></i> Quality Control
+                                    <i class="bi bi-shield-check me-0"></i> Quality Control
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link @GetActiveClass("Invoices")" asp-controller="Invoices" asp-action="Index">
+                                    <i class="bi bi-wallet2 me-0 text-white"></i> Invoice
                                 </a>
                             </li>
                         }
@@ -197,7 +202,7 @@
 
                             <li class="nav-item">
                                 <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm">
-                                    <button type="submit" class="btn btn-logout-custom btn-sm rounded-pill px-3 d-flex align-items-center">
+                                    <button type="submit" class="btn btn-logout-custom btn-sm rounded-pill px-2 d-flex align-items-center">
                                         <i class="bi bi-power me-1"></i> Logout
                                     </button>
                                 </form>
