--- a/GreenBowlFoodsSystem/Views/XRayChecks/Create.cshtml
+++ b/GreenBowlFoodsSystem/Views/XRayChecks/Create.cshtml
@@ -4,7 +4,8 @@
 
 @{
     ViewData["Title"] = "New X-Ray Inspection";
-    // Obtenemos el nombre del usuario actual para mostrarlo visualmente
+
+    // We obtain the current username to display visually
     var currentUser = await UserManager.GetUserAsync(User);
 }
 
