--- a/GreenBowlFoodsSystem/Views/FinishedProducts/Delete.cshtml
+++ b/GreenBowlFoodsSystem/Views/FinishedProducts/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model GreenBowlFoodsSystem.Models.FinishedProduct
 
 @{
-    ViewData["Title"] = "Delete Product";
+    ViewData["Title"] = "Delete Finished Product";
 }
 
 <div class="row justify-content-center">
     <div class="col-md-6">
 
         <div class="text-center mb-4 animate-fade-up">
-            <h1 class="display-6 fw-bold text-danger">Delete Product?</h1>
+            <h1 class="display-6 fw-bold text-danger">Delete Finished Product?</h1>
             <p class="text-white">Are you sure you want to delete this Product? This action cannot be undone..</p>
         </div>
 
