--- a/GreenBowlFoodsSystem/Views/FinishedProducts/Edit.cshtml
+++ b/GreenBowlFoodsSystem/Views/FinishedProducts/Edit.cshtml
@@ -1,14 +1,14 @@
 ﻿@model GreenBowlFoodsSystem.Models.FinishedProduct
 
 @{
-    ViewData["Title"] = "Edit Product";
+    ViewData["Title"] = "Edit Finished Product";
 }
 
 <div class="row justify-content-center">
     <div class="col-md-8">
 
         <div class="text-center mb-4 animate-fade-up">
-            <h1 class="display-6 fw-bold text-white">Edit Product</h1>
+            <h1 class="display-6 fw-bold text-white">Edit Finished Product</h1>
             <p class="text-white">Update product details and pricing.</p>
         </div>
 
