--- a/GreenBowlFoodsSystem/Views/PackagingMaterials/Details.cshtml
+++ b/GreenBowlFoodsSystem/Views/PackagingMaterials/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GreenBowlFoodsSystem.Models.PackagingMaterial
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Packaging Details";
 }
 
 <div class="row justify-content-center">
